# jejeqx

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE  Makefile  README.md  codecov.yaml  environment.yaml  pytest.ini  setup.cfg  setup.py
jejeqx/_src/: _version.py
jejeqx/_src/data/: images.py
jejeqx/_src/dataloaders/: __init__.py
jejeqx/_src/datamodules/: coords.py  coords_v2.py  image.py  natl60.py  test_images.py
jejeqx/_src/datasets/: __init__.py
jejeqx/_src/features/: coords.py  select.py
jejeqx/_src/fourdvar/: utils.py
jejeqx/_src/losses/: __init__.py
jejeqx/_src/metrics/: score.py
jejeqx/_src/nets/: activations.py  time_net.py  transforms.py
jejeqx/_src/pipelines/: __init__.py
jejeqx/_src/trainers/: base.py  callbacks.py  test_trainstate.py  trainstate.py
jejeqx/_src/transforms/: pipelines.py  spatial.py  temporal.py
jejeqx/_src/types/: test_xrdata.py  xrdata.py
jejeqx/_src/utils/: __init__.py  io.py  wandb.py
jejeqx/_src/viz/: geostrophic.py  utils.py
mylib/_src/dynamical/: l63.py
notebooks/: l63.ipynb  l96.ipynb  qg.ipynb
notebooks/dev/4dvarnet/: 1.1_l63_data.ipynb  1.2.1_l63_ode_strong.ipynb  1.2.1_l63_ode_weak.ipynb  1.2.2_l63_ode_weak_jaxopt.ipynb  1.2.3_l63_ode_strong.ipynb  1.2.4_l63_ode_strong_jaxopt.ipynb  1.2.4_l63_ode_weak_jaxopt.ipynb  1.3.1_l63_ode_param_strong.ipynb  overview.md  (+3 more)
notebooks/nn_utils/: demo_jax_ciclo.ipynb  demo_jax_trainer.ipynb  temp.eqx
requirements/: linux.yaml  macos.yaml  requirements-dev.txt  requirements-docs.txt  requirements-jlab.yaml  requirements-test.txt  requirements.yaml
scripts/: download_checkpoint.py  download_config.py
scripts/dc20a/: README.md  data_dc20a_obs.sh  data_dc20a_ref.sh  inference.py  main.py  train.py  utils.py
(+189 files in other folders)
