[metadata]
name = jemanjjax
author = J. Emmanuel Johnson
author_email = jemanjohnson34@gmail.com
description = My Python Package template
url = https://github.com/jejjohnson/jemanjjax
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MACOS/Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
project_urls =
    Documentation = ...
    Source = https://github.com/jejjohnson/jemanjjax
    Tracker = https://github.com/jejjohnson/jemanjjax/issues

[bumpversion]
current_version = 0.0.1

[pytest]
testpaths = jejeqx/

[flake8]
exclude = __init__.py,pyproject.toml,.eggs,doc
max-line-length = 80
max-complexity = 12
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[tool:mypy]
warn_unused_ignores = True
warn_redundant_casts = True
ignore_missing_imports = True

[mypy-pdoc.test.example_pkg.*]
ignore_errors = True

[tool:pytest]
testpaths = jejeqx/

[tool:pydocstyle]
convention = google

[isort]
profile = black

[bdist_wheel]
universal = 1

[versioneer]
    VCS = git
    style = pep440
    versionfile_source = jejeqx/_src/_version.py
    versionfile_build = jejeqx/_src/_version.py
    tag_prefix = v
